RESOLVED FIXED 31773
[Symbian] Fix lastIndexOf() for Symbian
https://bugs.webkit.org/show_bug.cgi?id=31773
Summary [Symbian] Fix lastIndexOf() for Symbian
Laszlo Gombos
Reported 2009-11-21 14:34:37 PST
Symbian soft floating point library has problems with operators comparing NAN to numbers. Without a workaround lastIndexOf() function does not work.
Attachments
Add an extra test to check for NAN. (1.41 KB, patch)
2009-11-21 14:40 PST, Laszlo Gombos
no flags
Give credits to David Leong. (1.46 KB, patch)
2009-11-21 14:56 PST, Laszlo Gombos
kenneth: review+
commit-queue: commit-queue-
Laszlo Gombos
Comment 1 2009-11-21 14:40:16 PST
Created attachment 43657 [details] Add an extra test to check for NAN.
Laszlo Gombos
Comment 2 2009-11-21 14:56:19 PST
Created attachment 43658 [details] Give credits to David Leong.
WebKit Commit Bot
Comment 3 2009-11-22 07:07:56 PST
Comment on attachment 43658 [details] Give credits to David Leong. Rejecting patch 43658 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11652 test cases. inspector/console-format.html -> crashed Exiting early after 1 failures. 9346 tests run. 465.10s total testing time 9345 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output
Simon Hausmann
Comment 4 2009-11-22 09:14:12 PST
Does this happens with the x86 toolchain as well as rvct? Does it only apply to builds that use software emulation for floating point operations or also for vfp builds? What about other places in the source code where we do similar things? What are the chances of getting this fixed upstream? (I'm okay with the workaround, I'm just curious about the background :)
Simon Hausmann
Comment 5 2009-11-23 05:02:41 PST
Simon Hausmann
Comment 6 2009-11-23 05:06:56 PST
Cherry-picked into qtwebkit-4.6 as commit efa69b6181ce5c045097351cdcf6c158da3f4888
Eric Seidel (no email)
Comment 7 2009-11-23 19:55:38 PST
Comment on attachment 43658 [details] Give credits to David Leong. Sorry, this was a false rejection due to bug 31817.
Janne Koskinen
Comment 8 2009-11-24 00:24:46 PST
Meh... http://bugreports.qt.nokia.com/browse/QTBUG-4621 This is Open C bug where NaN is a Number (check the pure Open C test case) and must be fixed there instead.
Simon Hausmann
Comment 9 2009-11-24 00:34:25 PST
(In reply to comment #8) > Meh... > http://bugreports.qt.nokia.com/browse/QTBUG-4621 > > This is Open C bug where NaN is a Number (check the pure Open C test case) and > must be fixed there instead. Ironically the workaround for this bug is to call isnan() ;-)
Note You need to log in before you can comment on or make changes to this bug.