[Symbian] Fix lastIndexOf() for Symbian https://bugs.webkit.org/show_bug.cgi?id=31773

Patch by Laszlo Gombos <laszlo.1.gombos@nokia.com> on 2009-11-23
Reviewed by Kenneth Rohde Christiansen.

Symbian soft floating point library has problems with operators
comparing NaN to numbers. Without a workaround lastIndexOf()
function does not work.

Patch developed by David Leong.

* runtime/StringPrototype.cpp:
(JSC::stringProtoFuncLastIndexOf):Add an extra test
to check for NaN for Symbian.

Canonical link: https://commits.webkit.org/42736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51307 268f45cc-cd09-0410-ab3c-d52691b4dbfc